<resources>
    <string name="app_name">easyget</string>
    <string name="login_google_label">Ingresar con Google</string>
    <string name="login_email_label">Ingresar con correo</string>
    <string name="signout_label">Salir</string>
    <string name="email_label">Ingresar correo electrónico</string>
    <string name="password_label">Ingresar contraseña</string>
    <string name="login_label">Ingresar</string>
    <string name="create_account_label">CREAR CUENTA</string>
    <string name="name_label_hint">Nombre</string>
    <string name="last_name_label_hint">Apellido</string>
    <string name="email_label_hint">Email</string>
    <string name="password_label_hint">Contraseña</string>
    <string name="password_confirm_label_hint">Confirmar contraseña</string>
    <string name="disclaimer">Al continuar implica que has leido y aceptas los  Terminos de servicio y Politica de Privacidad</string>
    <string name="no_account_label">¿Aun no tienes cuenta ?</string>
    <string name="close_label">Cerrar</string>
    <string name="oh">Oh!</string>
    <string name="bad_message">Algo salió mal, referencia: </string>
    <string name="invalid_mail">Formato de correo invalido</string>
    <string name="invalid_password">Minimo 6 caracteres y sin espacios!</string>
    <string name="invalid_field">Formato invalido</string>
    <string name="passwords_no_equals">Las constraseñas no coinciden</string>
    <string name="home_label">Home</string>
    <string name="lists_label">Listas</string>
    <string name="ofert_label">Ofertas</string>
    <string name="categories_label">Categorias</string>
    <string name="account_label">Cuenta</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="add_offer_btn">AGREGAR +</string>
    <string name="add_popular_btn">AGREGAR +</string>
    <string name="your_list_table">Tus Listas</string>
    <string name="agregar_al_carrito">AGREGAR AL CARRITO</string>
    <string name="minus">-</string>
    <string name="plus">+</string>
    <string name="descripcion">Descripcion:</string>
    <string name="results_search">Se encontraron %1$s resultados de tu busqueda de %2$s </string>
    <string name="suggestions_label">SUGERENCIAS</string>
    <string name="offer_label">OFERTAS</string>
    <string name="populars_label">POPULARES</string>
    <string name="continue_btn">Continuar</string>
    <string name="product_title_label">PRODUCTO</string>
    <string name="price_title_label">PRECIO</string>
    <string name="edit_btn_label">Editar</string>
    <string name="done_btn_label">Confirmar</string>
    <string name="quetzal">Q</string>
    <string name="subtotal_label">Subtotal</string>
    <string name="zero_price">0.00</string>
    <string name="total_label">Total</string>
    <string name="street_label">Dirección</string>
    <string name="delivery_street_title">Dirección de entrega</string>
    <string name="payment_type_title">Tipo de pago</string>
</resources>