<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".auth.RegisterUserActivity">
    <com.google.android.material.appbar.AppBarLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:theme="@style/AppTheme.AppBarOverlay"
        app:layout_behavior="@string/appbar_scrolling_view_behavior">

        <androidx.appcompat.widget.Toolbar
            android:id="@+id/registerToolbar"
            android:layout_width="match_parent"
            android:layout_height="?attr/actionBarSize"
            android:background="@color/colorPrimary"
            app:theme="@style/ToolbarColoredBackArrowGray"
            app:popupTheme="@style/AppTheme.PopupOverlay">
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:gravity="center"
                android:orientation="horizontal">
                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:gravity="start|center"
                    android:layout_weight="1.5">
                    <ImageView
                        android:id="@+id/btn_back"
                        android:layout_width="wrap_content"
                        android:layout_height="match_parent"
                        android:layout_margin="5dp"
                        android:theme="@style/ToolbarColoredBackArrowWhite"
                        android:src="?attr/homeAsUpIndicator"
                        android:background="?selectableItemBackgroundBorderless"/>
                </LinearLayout>
                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:gravity="center"
                    android:layout_weight="1">

                </LinearLayout>
                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:gravity="end|center"
                    android:paddingEnd="5dp"
                    android:layout_weight="1.4">

                </LinearLayout>
            </LinearLayout>
        </androidx.appcompat.widget.Toolbar>

    </com.google.android.material.appbar.AppBarLayout>

    <androidx.swiperefreshlayout.widget.SwipeRefreshLayout
        android:id="@+id/swipe_user_register"
        android:layout_width="match_parent"
        android:layout_height="match_parent">
        <ScrollView
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:fillViewport="true"
            android:layout_weight="1">
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:padding="10dp"
                android:orientation="vertical">
                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:padding="10dp"
                    android:layout_marginBottom="10dp"
                    android:orientation="vertical">
                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:paddingVertical="30dp"
                        android:gravity="center">

                        <ImageView
                            android:layout_width="329dp"
                            android:layout_height="58dp"
                            android:src="@drawable/logo_easyget" />
                    </LinearLayout>
                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:gravity="start"
                        android:textSize="22sp"
                        android:layout_marginBottom="20dp"
                        android:textStyle="bold"
                        android:text="@string/create_account_label"/>
                    <com.google.android.material.textfield.TextInputLayout
                        android:id="@+id/first_name_register_layout"
                        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        app:boxCornerRadiusBottomStart="20dp"
                        app:boxCornerRadiusBottomEnd="20dp"
                        app:boxCornerRadiusTopStart="20dp"
                        app:boxCornerRadiusTopEnd="20dp"
                        android:theme="@style/textInputRounder">
                        <com.google.android.material.textfield.TextInputEditText
                            android:id="@+id/first_name_register"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:paddingStart="20dp"
                            android:hint="@string/name_label_hint"
                            android:imeOptions="actionNext"
                            android:inputType="text"/>
                    </com.google.android.material.textfield.TextInputLayout>
                    <com.google.android.material.textfield.TextInputLayout
                        android:id="@+id/last_name_register_layout"
                        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        app:boxCornerRadiusBottomStart="20dp"
                        app:boxCornerRadiusBottomEnd="20dp"
                        app:boxCornerRadiusTopStart="20dp"
                        app:boxCornerRadiusTopEnd="20dp"
                        android:layout_marginTop="20dp"
                        android:theme="@style/textInputRounder">
                        <com.google.android.material.textfield.TextInputEditText
                            android:id="@+id/last_name_register"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:paddingStart="20dp"
                            android:hint="@string/last_name_label_hint"
                            android:imeOptions="actionNext"
                            android:inputType="text"/>
                    </com.google.android.material.textfield.TextInputLayout>
                    <com.google.android.material.textfield.TextInputLayout
                        android:id="@+id/email_register_layout"
                        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        app:boxCornerRadiusBottomStart="20dp"
                        app:boxCornerRadiusBottomEnd="20dp"
                        app:boxCornerRadiusTopStart="20dp"
                        app:boxCornerRadiusTopEnd="20dp"
                        android:layout_marginTop="20dp"
                        android:theme="@style/textInputRounder">
                        <com.google.android.material.textfield.TextInputEditText
                            android:id="@+id/email_register"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:paddingStart="20dp"
                            android:hint="@string/email_label_hint"
                            android:imeOptions="actionNext"
                            android:inputType="textEmailAddress"/>
                    </com.google.android.material.textfield.TextInputLayout>
                    <com.google.android.material.textfield.TextInputLayout
                        android:id="@+id/password_register_layout"
                        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        app:boxCornerRadiusBottomStart="20dp"
                        app:boxCornerRadiusBottomEnd="20dp"
                        app:boxCornerRadiusTopStart="20dp"
                        app:boxCornerRadiusTopEnd="20dp"
                        app:passwordToggleEnabled="true"
                        android:layout_marginTop="20dp"
                        android:theme="@style/textInputRounder">

                        <com.google.android.material.textfield.TextInputEditText
                            android:id="@+id/password_register"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:paddingStart="20dp"
                            android:paddingEnd="20dp"
                            android:hint="@string/password_label_hint"
                            android:imeOptions="actionNext"
                            android:inputType="textPassword" />
                    </com.google.android.material.textfield.TextInputLayout>
                    <com.google.android.material.textfield.TextInputLayout
                        android:id="@+id/password_confirm_register_layout"
                        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        app:boxCornerRadiusBottomStart="20dp"
                        app:boxCornerRadiusBottomEnd="20dp"
                        app:boxCornerRadiusTopStart="20dp"
                        app:boxCornerRadiusTopEnd="20dp"
                        android:layout_marginTop="20dp"
                        app:passwordToggleEnabled="true"
                        android:theme="@style/textInputRounder">
                        <com.google.android.material.textfield.TextInputEditText
                            android:id="@+id/password_confirm_register"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:paddingStart="20dp"
                            android:paddingEnd="20dp"
                            android:hint="@string/password_confirm_label_hint"
                            android:imeOptions="actionDone"
                            android:inputType="textPassword" />
                    </com.google.android.material.textfield.TextInputLayout>
                    <Button
                        android:id="@+id/btn_register"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center"
                        android:layout_marginTop="20dp"
                        android:layout_marginBottom="20dp"
                        android:background="@drawable/rounded_shape"
                        android:paddingEnd="70dp"
                        android:paddingStart="70dp"
                        android:text="@string/create_account_label"
                        android:textColor="@color/white" />
                </LinearLayout>
                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="20dp"
                    android:orientation="horizontal">
                    <TextView
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:gravity="center"
                        android:textColor="@color/gris_sof"
                        android:textSize="12sp"
                        android:text="@string/disclaimer"/>
                </LinearLayout>
            </LinearLayout>

        </ScrollView>


    </androidx.swiperefreshlayout.widget.SwipeRefreshLayout>



</LinearLayout>